--- a/views/task.ejs
+++ b/views/task.ejs
@@ -42,9 +42,7 @@
             <form method="POST">
                 <div class="form-group">
                     <label for="newcomment">New comment</label>
-                    <textarea class="form-control" id="newcomment">
-
-                    </textarea>
+                    <textarea class="form-control" id="newcomment" name="newcomment"></textarea>
                 </div>
                 <input type="submit" class="btn btn-primary" value="New comment"/>
             </form>
