--- a/views/onecomment.ejs
+++ b/views/onecomment.ejs
@@ -3,7 +3,7 @@
         <a href="/comment/<%= taskid %>/<%= item.id %>/edit">Modify</a> |
         <a href="/comment/<%= taskid %>/<%= item.id %>/delete">Delete</a>
     </div>
-    <div class="commentname">Pistike <span><%= item.date %></span>:</div>
+    <div class="commentname"><%= item._user ? item._user.name : '-' %> <span><%= item.date %></span>:</div>
     <div class="commenttext">
         <%= item.comment %>
     </div>
