--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,10 @@
             <%- include('errorbox') %>
             <form method="POST">
                 <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Name">
+                </div>
+                <div class="form-group">
                     <label for="email">Email</label>
                     <input type="text" class="form-control" name="email" id="email" placeholder="Email">
                 </div>
