--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,5 @@
 <script src="/js/jquery.1.11.3.js"></script>
 <script src="/js/bootstrap.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
