--- a/views/task.ejs
+++ b/views/task.ejs
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <h2><input type="checkbox"/> <%= task.title %></h2>
+            <h2><input type="checkbox" name="<%= task.id %>" class="taskstatus" <%= task.state == 1 ? 'checked' : '' %>/> <%= task.title %></h2>
             <a href="/tasks/">Back to the tasks</a>
         </div>
         <div class="col-xs-12">
